kubernetes/test/default-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: bar
  namespace: test
  UID: two
spec:
  type: ClusterIP
  clusterIP: 1.2.3.4
  ports:
  - name: web
    port: 80
    targetPort: http
