kubernetes/test/route-ingress-endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: baz
  namespace: test
Subsets:
  - Addresses:
      - IP: 1.2.3.4
      - IP: 2.3.4.5
      - IP: 3.4.5.6
    Ports:
      - Name: web
        Port: 9091
        Protocol: TCP
