kubernetes/test/route-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: route-ingress-svc
  namespace: test
  annotations:
    romulus/path: "/bar"
    romulus/methods: "get; post"
spec:
  ports:
  - name: web
    port: 80
    targetPort: http
    protocol: TCP
